# aruco_pose_estimation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  input.txt  input.txt~  input_label.txt  input_test.txt  one_object.txt  param.yaml
Examples/RGB-D/: aruco_pose.cpp  labeled_cloud_view.cpp  pcl_view.cpp  rgbd_tum.cpp  rgbd_tum.cpp.autosave  seg_label.cpp
html/: 3DTransformation_8cpp.html  3DTransformation_8h.html  3DTransformation_8h_source.html  3_82_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_82_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  3_82_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_82_82_2CompilerIdC_2CMakeCCompilerId_8c.js  3_88_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_88_82_2CompilerIdC_2CMakeCCompilerId_8c.html  README_8md.html  annotated.html  annotated.js  aruco__pose_8cpp.html  aruco__pose_8cpp.js  classes.html  classposeEstimate_1_1feature-members.html  classposeEstimate_1_1feature.html  classposeEstimate_1_1feature.js  classposeEstimate_1_1pose-members.html  classposeEstimate_1_1pose.html  classposeEstimate_1_1pose.js  dir_3da1d3e4745d546beccbaa8335e2b346.html  dir_3da1d3e4745d546beccbaa8335e2b346.js  dir_3e4ff2269e2bebeb8184dcafe7303d35.html  dir_3e4ff2269e2bebeb8184dcafe7303d35.js  dir_4a543110fd4df44e54ebcbceb778388c.html  dir_4a543110fd4df44e54ebcbceb778388c.js  dir_722c793ce2671c50d5ee23d754df0f5a.html  dir_722c793ce2671c50d5ee23d754df0f5a.js  dir_7711d59c261e11dbed21a05499bb5615.html  dir_7711d59c261e11dbed21a05499bb5615.js  dir_7d23de0394910e1a8b473b002e5b8be9.html  dir_7d23de0394910e1a8b473b002e5b8be9.js  dir_9a1a89f9aa330f5a7f5207060e9e0219.html  dir_9a1a89f9aa330f5a7f5207060e9e0219.js  dir_a4c5cea812767ca280d541800a3da62d.html  dir_a4c5cea812767ca280d541800a3da62d.js  dir_a5f8cd07c8958d07212fefee6e7e9bb2.html  dir_a5f8cd07c8958d07212fefee6e7e9bb2.js  dir_c6d23eb37650345b31c18b1006e46347.html  (+38 more)
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  search.js  typedefs_0.js  (+12 more)
include/: 3DTransformation.h  featureDetect.h
src/: 3DTransformation.cpp  featureDetect.cpp
